--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
             mobileNav.className = 'block'
         }
     }
+    // To initiate gsap
     document.addEventListener("DOMContentLoaded", (event) => {
         gsap.registerPlugin(ScrollTrigger)
         const tl = gsap.timeline({
