--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     lg:pt-40 lg:px-28 py-10 sm:gap-10 md:gap-5 lg:h-full">
             <div class="hero-heading-container w-2/3" data-aos="fade-up" data-aos-delay="300">
                 <h1 class="text-white text-7xl md:text-6xl sm:text-3xl font-bold mb-10">A bank with you in mind.</h1>
-                <button class="bg-white text-site-shapes px-28 py-3 sm:px-24 text-center rounded-lg shadow-md">Join the Waitlist</button>
+                <button class="bg-white text-site-shapes py-3 w-full lg:w-1/2 text-center rounded-lg shadow-md">Join the Waitlist</button>
             </div>
             <div class="hero-img" data-aos="fade-up" data-aos-delay="500">
                 <img alt="bank building"
@@ -118,7 +118,7 @@
         <img class="hero-shape hero-shape-blur h-28 top-36 right-96" src="img/bulge-faced-hexagon.png" alt="object">
       </div>
     </div>
-    <section class="why-section h-screen sm:h-[60vh] bg-white flex items-center justify-center">
+    <section class="why-section h-screen sm:h-[40vh] bg-white flex items-center justify-center">
         <h1 class="text-center text-8xl md:text-7xl sm:text-5xl font-bold text-site-primary leading-[7rem]">
           Why
           <br>
@@ -129,7 +129,7 @@
         class="text-8xl font-bold text-site-primary w-full absolute opacity-5">ITQAN</h1>
     </section>
     <div class="stepper-section-container pb-52">
-        <section class="stepper-section flex sm:flex-col-reverse justify-evenly lg:px-28">
+        <section class="stepper-section flex sm:flex-col-reverse justify-evenly lg:px-28 gap-14">
             <div class="stepper-container sm:hidden flex flex-col items-center w-1/6">
                 <div class="stepper-circle stepper-circle-checked"></div>
                 <div class="stepper-line"></div>
@@ -139,15 +139,15 @@
                 <div class="stepper-line"></div>
                 <div class="stepper-circle"></div>
             </div>
-            <div class="text-stepper-container self-start sm:ml-4 sm:w-5/6 w-3/6">
+            <div class="text-stepper-container self-center sm:w-5/6 w-3/6">
                 <div class="text-stepper-container-1">
-                    <h1 class="text-7xl md:text-6xl sm:text-5xl text-site-primary font-bold mb-5">Flexible</h1>
+                    <h1 class="text-7xl md:text-6xl sm:text-4xl text-site-primary font-bold mb-5">Flexible</h1>
                     <p class="text-2xl sm:text-lg text-site-secondary">Our services are designed to meet your
                         specific needs and are accessible anytime, anywhere
                     </p>
                 </div>
             </div>
-            <div class="img-stepper-container self-end sm:mr-4 flex flex-col items-center w-2/6">
+            <div class="img-stepper-container self-center flex flex-col items-center lg:w-3/6 w-2/6 ">
                <img class="w-72 img-stepper-container-1" src="img/directions.png" alt="directions">
                <img class="w-72 hidden img-stepper-container-2" src="img/secure-data.png" alt="secure">
                <img class="w-72 hidden img-stepper-container-3" src="img/transparency.png" alt="transparency">
@@ -156,12 +156,12 @@
         </section>
     </div>
     <section class="faq-section bg-[#f6f7f8] py-20">
-        <div class="faq-conatiner bg-white mx-16 sm:mx-6 px-16 py-6 rounded-lg">
+        <div class="faq-conatiner bg-white mx-16 sm:mx-6 px-16 sm:px-4 py-6 rounded-lg">
             <h1 class="text-6xl sm:text-5xl font-bold gradient-text absolute" style="transform: translate(10px, -60px);">FAQs</h1>
             <div class="details">
                 <details class="details__container">
                   <summary class="details__summary">
-                    <h2 class="details__title text-3xl sm:text-xl">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
+                    <h2 class="details__title text-3xl sm:text-base">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
                   </summary>
                 </details>
                 <div class="details__desc">
@@ -172,7 +172,7 @@
             <div class="details">
                 <details class="details__container">
                   <summary class="details__summary">
-                    <h2 class="details__title text-3xl sm:text-xl">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
+                    <h2 class="details__title text-3xl sm:text-base">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
                   </summary>
                 </details>
                 <div class="details__desc">
@@ -183,7 +183,7 @@
             <div class="details">
                 <details class="details__container">
                   <summary class="details__summary">
-                    <h2 class="details__title text-3xl sm:text-xl">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
+                    <h2 class="details__title text-3xl sm:text-base">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
                   </summary>
                 </details>
                 <div class="details__desc">
@@ -194,7 +194,7 @@
             <div class="details">
                 <details class="details__container">
                   <summary class="details__summary">
-                    <h2 class="details__title text-3xl sm:text-xl">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
+                    <h2 class="details__title text-3xl sm:text-base">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
                   </summary>
                 </details>
                 <div class="details__desc">
@@ -205,7 +205,7 @@
             <div class="details">
                 <details class="details__container">
                   <summary class="details__summary">
-                    <h2 class="details__title text-3xl sm:text-xl">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
+                    <h2 class="details__title text-3xl sm:text-base">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
                   </summary>
                 </details>
                 <div class="details__desc">
@@ -216,7 +216,7 @@
             <div class="details">
                 <details class="details__container">
                   <summary class="details__summary">
-                    <h2 class="details__title text-3xl sm:text-xl">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
+                    <h2 class="details__title text-3xl sm:text-base">Is D360 Bank a licensed bank in Saudi Arabia?</h2>
                   </summary>
                 </details>
                 <div class="details__desc">
