edit animation duration

--- a/index-ar.html
+++ b/index-ar.html
@@ -14,7 +14,8 @@
     <script src="app.js"></script>
 </head>
 <body style="direction: rtl;">
-  <nav class="bg-gradient-to-r from-site-shapes to-cyan-600 lg:py-8 py-4 px-16 sm:px-6 flex justify-between w-full fixed top-0 z-10" data-aos="fade-up">
+  <nav class="bg-gradient-to-r from-site-shapes to-cyan-600 lg:py-8 py-4 px-16 sm:px-6 flex justify-between w-full fixed top-0 z-10"
+       data-aos="fade-up" data-aos-duration="1500">
     <div class="flex items-center ">
         <a href="" class=" bg-white p-2 rounded-lg">
             <img src="img/logo.png" alt="logo" width="120">
@@ -68,11 +69,11 @@
 <section class="hero-section h-screen bg-gradient-to-r from-site-shapes to-cyan-600 lg:mt-0 mt-10">
     <div class="hero-content  flex lg:flex-row flex-col-reverse justify-between items-center text-center lg:text-right
                 lg:pt-40 lg:px-28 py-10 sm:gap-10 md:gap-5 lg:h-full">
-        <div class="hero-heading-container w-2/3" data-aos="fade-up" data-aos-delay="300">
+        <div class="hero-heading-container w-2/3" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1500" >
             <h1 class="text-white text-7xl md:text-6xl sm:text-3xl font-bold mb-10">البنك معك في الاعتبار.</h1>
             <button class="bg-white text-site-shapes py-3 w-full lg:w-1/2 text-center rounded-lg shadow-md">انضم الى قائمة الانتظار</button>
         </div>
-        <div class="hero-img" data-aos="fade-up" data-aos-delay="500">
+        <div class="hero-img" data-aos="fade-up" data-aos-delay="1500" data-aos-duration="1500">
             <img alt="bank building"
                 src="img/bank-building.png"
                 loading="lazy"
@@ -81,7 +82,7 @@
         </div>
     </div>
 </section>
-    <div class="hero-shapes-container absolute inset-0 h-screen overflow-hidden" data-aos="zoom-in" data-aos-delay="600">
+    <div class="hero-shapes-container absolute inset-0 h-screen overflow-hidden" data-aos="zoom-in" data-aos-delay="2000" data-aos-duration="1000">
       <div class="hero-shapes-holder relative w-full h-full bg-transparent">
         <img class="hero-shape h-32 top-28" src="img/ball-split.png" alt="object">
         <img class="hero-shape hero-shape-blur h-64 top-14 -right-32" src="img/ball-split.png" alt="object">
@@ -203,7 +204,8 @@
     <div  class="qr-container fixed bottom-4 right-24 p-3 bg-white flex justify-around items-center w-64 h-32
                rounded-lg sm:hidden" 
           data-aos="fade-up"
-          data-aos-delay="600"
+          data-aos-delay="2000"
+          data-aos-duration="1000"
     >
       <div class="qr-text-container">
         <p class="text-site-text-secondary">تحميل</p>
