--- a/about-us.html
+++ b/about-us.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Itqan PRO - A bank with you in mind</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="../img/logo.png" type="image/x-icon">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -16,14 +16,14 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../app.js"></script>
+    <script src="app.js"></script>
 </head>
 <body class="overflow-x-hidden"> 
     <nav class="bg-transparent lg:py-8 py-4 px-16 sm:px-6 flex justify-between w-full fixed top-0 z-50" 
          data-aos="fade-up" data-aos-duration="1500">
         <div class="flex items-center ">
             <a href="index.html" class=" bg-white p-2 rounded-lg">
-                <img src="../img/logo.png" alt="logo" width="120">
+                <img src="img/logo.png" alt="logo" width="120">
             </a>
             <div class="ml-8 text-xl text-white lang-container lg:block hidden">
                 <a href="">
@@ -49,7 +49,7 @@
         <section id="mobile-nav" class="hidden">
             <div class="flex items-center justify-between h-1/6">
                 <a href="index.html" >
-                    <img src="../img/logo.png" alt="logo" width="110">
+                    <img src="img/logo.png" alt="logo" width="110">
                 </a>
                 <button type="button" onclick="showHideNav()" class="nav-button lg:hidden relative inline-flex items-center justify-center rounded-md p-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black" aria-controls="mobile-menu" aria-expanded="false">
                     <span class="absolute -inset-0.5"></span>
@@ -77,7 +77,7 @@
            data-aos="fade-up" data-aos-duration="1500">
           <div class="flex items-center ">
               <a href="index.html" class="p-2 rounded-lg">
-                  <img src="../img/logo.png" alt="logo" width="120">
+                  <img src="img/logo.png" alt="logo" width="120">
               </a>
               <div class="ml-8 text-xl text-site-text-secondary lg:block hidden">
                   <a href="about-us.html">
@@ -99,7 +99,7 @@
           <section id="mobile-nav" class="hidden">
               <div class="flex items-center justify-between h-1/6">
                   <a href="index.html" >
-                      <img src="../img/logo.png" alt="logo" width="110">
+                      <img src="img/logo.png" alt="logo" width="110">
                   </a>
                   <button type="button" onclick="showHideNav()" class="nav-button lg:hidden relative inline-flex items-center justify-center rounded-md p-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black" aria-controls="mobile-menu" aria-expanded="false">
                       <span class="absolute -inset-0.5"></span>
@@ -153,8 +153,8 @@
     </section>
     <section class="testemonial-section px-20 md:px-10 sm:px-5 pt-36 sm:pt-20 h-screen sm:h-[60vh] bg-[#f6f7f8]">
       <div class="testemonial-container p-14 md:p-10 sm:p-7 bg-white rounded-xl relative">
-        <img src="../img/leaf.svg" alt="leaf" class="absolute right-4 -top-4 sm:w-7">
-        <img src="../img/star.svg" alt="leaf" class="absolute left-4 -bottom-4 sm:w-7">
+        <img src="img/leaf.svg" alt="leaf" class="absolute right-4 -top-4 sm:w-7">
+        <img src="img/star.svg" alt="leaf" class="absolute left-4 -bottom-4 sm:w-7">
         <h1 class="text-site-text-primary text-8xl md:text-6xl sm:text-3xl font-bold absolute top-0 
                   -translate-x-12 -translate-y-16 md:-translate-x-8 md:-translate-y-10 sm:-translate-x-3 sm:-translate-y-5">Reinventing</h1>
         <p class="w-5/6 text-3xl sm:text-xl leading-10 text-site-shapes">finance through innovation & technology making it convenient, accessible & fair to all.</p>
@@ -164,7 +164,7 @@
       <h1 class="text-7xl font-bold sm:text-3xl text-site-text-primary px-20 md:px-10 sm:px-5">Our Story</h1>
       <div class="lg:flex block h-screen items-center px-10 sm:relative md:relative">
         <div class="img-container-1 lg:w-1/2 w-full lg:translate-x-3 mb-10 sm:left-1/2 sm:translate-y-1/2">
-          <img src="../img/storyIllustration1.svg" alt="storyIllustration">
+          <img src="img/storyIllustration1.svg" alt="storyIllustration">
         </div>
         <div class="text-container-1 bg-white p-16 md:p-12 sm:p-8 lg:w-1/2 w-full h-fit rounded-2xl lg:-translate-x-3 sm:absolute sm:translate-y-1/4 md:absolute md:bottom-0 sm:w-5/6 sm:left-1/2 sm:-translate-x-1/2 md:w-5/6 md:left-1/2 md:-translate-x-1/2">
           <p class="text-4xl md:text-2xl sm:text-lg text-site-text-primary lg:leading-[3rem]">We saw a need for a digital bank that offers faster and more convenient services, catering to all members of society.</p>
@@ -175,12 +175,12 @@
           <p class="text-4xl md:text-2xl sm:text-lg text-site-text-primary lg:leading-[3rem]">We saw a need for a digital bank that offers faster and more convenient services, catering to all members of society.</p>
         </div>
         <div class="img-container-2 lg:w-1/2 w-full lg:-translate-x-3 mb-10 sm:absolute sm:top-1 sm:opacity-0 md:absolute md:top-1 md:opacity-0 sm:left-1/2 sm:-translate-x-1/2 sm:translate-y-1/2">
-          <img src="../img/storyIllustration2.svg" alt="storyIllustration">
+          <img src="img/storyIllustration2.svg" alt="storyIllustration">
         </div>
       </div>
       <div class="lg:flex block h-screen items-center px-10 hide-2">
         <div class="img-container-3 lg:w-1/2 w-full lg:translate-x-3 mb-10 sm:absolute sm:top-1 sm:opacity-0 md:absolute md:top-1 md:opacity-0 sm:left-1/2 sm:-translate-x-1/2 sm:translate-y-1/2">
-          <img src="../img/storyIllustration3.svg" alt="storyIllustration">
+          <img src="img/storyIllustration3.svg" alt="storyIllustration">
         </div>
         <div class="text-container-3 bg-white p-16 md:p-12 sm:p-8 lg:w-1/2 w-full h-fit rounded-2xl lg:-translate-x-3 sm:absolute sm:bottom-0 md:absolute md:bottom-0 sm:w-5/6 sm:left-1/2 sm:-translate-x-1/2 md:w-5/6 md:left-1/2 md:-translate-x-1/2">
           <p class="text-4xl md:text-2xl sm:text-lg text-site-text-primary lg:leading-[3rem]">We saw a need for a digital bank that offers faster and more convenient services, catering to all members of society.</p>
@@ -198,7 +198,7 @@
           <div class="swiper-slide ">
             <div class="bg-white w-5/6 sm:w-4/6 mx-auto px-16 sm:px-6 py-14 sm:py-8 rounded-xl">
               <div class="slide-header flex sm:flex-col sm:items-center">
-                <img class="w-64 sm:w-48  relative -translate-y-28" src="../img/profile.png" alt="">
+                <img class="w-64 sm:w-48  relative -translate-y-28" src="img/profile.png" alt="">
                 <div class="slide-header-text sm:relative sm:-mt-36">
                   <h1 class="text-2xl sm:text-xl text-site-text-primary mb-3">Basem A. Alsallom</h1>
                   <p class="text-lg sm:text-base text-site-text-secondary">Board member</p>
@@ -216,7 +216,7 @@
           <div class="swiper-slide ">
             <div class="bg-white w-5/6 sm:w-4/6 mx-auto px-16 sm:px-6 py-14 sm:py-8 rounded-xl">
               <div class="slide-header flex sm:flex-col sm:items-center">
-                <img class="w-64 sm:w-48  relative -translate-y-28" src="../img/profile.png" alt="">
+                <img class="w-64 sm:w-48  relative -translate-y-28" src="img/profile.png" alt="">
                 <div class="slide-header-text sm:relative sm:-mt-36">
                   <h1 class="text-2xl sm:text-xl text-site-text-primary mb-3">Basem A. Alsallom</h1>
                   <p class="text-lg sm:text-base text-site-text-secondary">Board member</p>
@@ -239,23 +239,23 @@
     <section class="committee-section bg-[#f6f7f8] pb-32 px-20 md:px-10 sm:px-5 z-30 relative">
       <h1 class="text-7xl font-bold sm:text-3xl text-site-text-primary mb-10">Shariah Committee</h1>
       <div class="committee-container relative p-14 md:p-10 sm:p-7 bg-white rounded-xl">
-        <img src="../img/leaf.svg" alt="leaf" class="absolute right-4 -bottom-4 sm:w-7">
+        <img src="img/leaf.svg" alt="leaf" class="absolute right-4 -bottom-4 sm:w-7">
         <p class="text-3xl sm:text-xl leading-10 text-site-shapes">D360 Bank is committed to the principles of Islamic Shariah and ensuring compliance in all its banking transactions. To achieve this, an independent Shariah committee has been established to oversee all the bank's operations, products, and services.</p>
       </div>
     </section>
     <div class="divider-container bg-[#f6f7f8] pb-16 z-30 relative">
-      <img src="../img/diamondDivider..svg" alt="dimond" class="mx-auto">
+      <img src="img/diamondDivider..svg" alt="dimond" class="mx-auto">
     </div>
     <section class="Investors-section bg-site-text-secondary">
-      <img class="w-full py-32"  src="../img/line.svg" alt="">
+      <img class="w-full py-32"  src="img/line.svg" alt="">
       <h1 class="text-center text-white text-4xl sm:text-2xl pb-12">Regulated & Supervised by</h1>
-      <img class="pb-32 sm:w-32 text-center mx-auto" src="../img/regulator.svg" alt="">
+      <img class="pb-32 sm:w-32 text-center mx-auto" src="img/regulator.svg" alt="">
       <h1 class="text-center text-white text-4xl sm:text-2xl pb-12">Strategic Investors</h1>
       <div class="flex justify-center items-center gap-2"> 
-        <img class="sm:w-32" src="../img/regulator.svg" alt="">
-        <img class="sm:w-32" src="../img/regulator.svg" alt="">
+        <img class="sm:w-32" src="img/regulator.svg" alt="">
+        <img class="sm:w-32" src="img/regulator.svg" alt="">
       </div>
-      <img class="w-full py-32 sm:py-20"  src="../img/line.svg" alt="">
+      <img class="w-full py-32 sm:py-20"  src="img/line.svg" alt="">
     </section>
     <footer class="bg-white lg:px-32 px-8 mt-10 z-40 pt-6 relative">
       <div class="footer-links-container flex lg:flex-row flex-col gap-8 justify-evenly items-start lg:items-center">
@@ -275,7 +275,7 @@
         <a href="" class="text-site-text-secondary text-lg font-bold">Follow us</a>
       </div>
       <div class="footer-logo-container">
-        <img src="../img/logo.png" alt="logo" class="w-36 mx-auto">
+        <img src="img/logo.png" alt="logo" class="w-36 mx-auto">
       </div>
       <p class="text-site-text-secondary text-sm text-center my-5">All rights reserved © Itqan Pro</p>
     </footer>
