--- a/index-ar.html
+++ b/index-ar.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>إتقان برو - بنك يضعك في الاعتبار</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="../img/logo.png" type="image/x-icon">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;400;700&display=swap" rel="stylesheet">
@@ -15,14 +15,14 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <script src="../app.js"></script>
+    <script src="app.js"></script>
 </head>
 <body style="direction: rtl;font-family: Tajawal, sans-serif;">
   <nav class="bg-gradient-to-r from-site-shapes to-cyan-600 lg:py-8 py-4 px-16 sm:px-6 flex justify-between w-full fixed top-0 z-[39]"
        data-aos="fade-up" data-aos-duration="1500">
     <div class="flex items-center ">
         <a href="" class=" bg-white p-2 rounded-lg">
-            <img src="../img/logo.png" alt="logo" width="120">
+            <img src="img/logo.png" alt="logo" width="120">
         </a>
         <div class="mr-8 text-xl text-white lg:block hidden">
             <a href="about-us-ar.html">
@@ -48,7 +48,7 @@
     <section id="mobile-nav" class="hidden">
         <div class="flex items-center justify-between h-1/6">
             <a href="" >
-                <img src="../img/logo.png" alt="logo" width="110">
+                <img src="img/logo.png" alt="logo" width="110">
             </a>
             <button type="button" onclick="showHideNav()" class="nav-button lg:hidden relative inline-flex items-center justify-center rounded-md p-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black" aria-controls="mobile-menu" aria-expanded="false">
                 <span class="absolute -inset-0.5"></span>
@@ -76,7 +76,7 @@
        data-aos="fade-up" data-aos-duration="1500">
       <div class="flex items-center ">
           <a href="" class="p-2 rounded-lg">
-              <img src="../img/logo.png" alt="logo" width="120">
+              <img src="img/logo.png" alt="logo" width="120">
           </a>
           <div class="ml-8 text-xl text-site-text-secondary lg:block hidden">
               <a href="about-us-ar.html">
@@ -98,7 +98,7 @@
       <section id="mobile-nav" class="hidden">
           <div class="flex items-center justify-between h-1/6">
               <a href="" >
-                  <img src="../img/logo.png" alt="logo" width="110">
+                  <img src="img/logo.png" alt="logo" width="110">
               </a>
               <button type="button" onclick="showHideNav()" class="nav-button lg:hidden relative inline-flex items-center justify-center rounded-md p-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black" aria-controls="mobile-menu" aria-expanded="false">
                   <span class="absolute -inset-0.5"></span>
@@ -153,7 +153,7 @@
        data-aos="fade-up" data-aos-duration="1500" style="direction: rtl;">
       <div class="flex items-center ">
           <a href="" class="p-2 rounded-lg">
-              <img src="../img/logo.png" alt="logo" width="120">
+              <img src="img/logo.png" alt="logo" width="120">
           </a>
           <div class="ml-8 text-xl text-site-text-secondary lg:block hidden">
               <a href="about-us-ar.html">
@@ -175,7 +175,7 @@
       <section id="mobile-nav" class="hidden">
           <div class="flex items-center justify-between h-1/6">
               <a href="" >
-                  <img src="../img/logo.png" alt="logo" width="110">
+                  <img src="img/logo.png" alt="logo" width="110">
               </a>
               <button type="button" onclick="showHideNav()" class="nav-button lg:hidden relative inline-flex items-center justify-center rounded-md p-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black" aria-controls="mobile-menu" aria-expanded="false">
                   <span class="absolute -inset-0.5"></span>
@@ -249,7 +249,7 @@
         </div>
         <div class="hero-img" data-aos="fade-up" data-aos-delay="1500" data-aos-duration="1500">
             <img alt="bank building"
-                src="../img/bank-building.png"
+                src="img/bank-building.png"
                 loading="lazy"
                 style="color: transparent;"
                 class="lg:w-96 lg:h-96 w-60 h-60">
@@ -258,14 +258,14 @@
 </section>
     <div class="hero-shapes-container absolute inset-0 h-screen overflow-hidden" data-aos="zoom-in" data-aos-delay="2000" data-aos-duration="1000">
       <div class="hero-shapes-holder relative w-full h-full bg-transparent">
-        <img class="hero-shape h-32 top-28" src="../img/ball-split.png" alt="object">
-        <img class="hero-shape hero-shape-blur h-64 top-14 -right-32" src="../img/ball-split.png" alt="object">
-        <img class="hero-shape hero-shape-blur h-24 bottom-28 right-96" src="../img/ball-split.png" alt="object">
-        <img class="hero-shape hero-shape-blur h-24 bottom-36 right-80" src="../img/basic-gem.png" alt="object">
-        <img class="hero-shape h-32 top-32 right-24 " src="../img/basic-gem.png" alt="object">
-        <img class="hero-shape h-44 bottom-10 left-72" src="../img/basic-gem.png" alt="object">
-        <img class="hero-shape h-36 top-64 left-96" src="../img/bulge-faced-hexagon.png" alt="object">
-        <img class="hero-shape hero-shape-blur h-28 top-36 right-96" src="../img/bulge-faced-hexagon.png" alt="object">
+        <!-- <img class="hero-shape h-32 top-28" src="img/logo.png" alt="object">
+        <img class="hero-shape hero-shape-blur h-64 top-14 -right-32" src="img/logo.png" alt="object">
+        <img class="hero-shape hero-shape-blur h-24 bottom-28 right-96" src="img/logo.png" alt="object"> -->
+        <img class="hero-shape hero-shape-blur h-24 bottom-36 right-80" src="img/dollar-coin.png" alt="object">
+        <img class="hero-shape h-32 top-32 right-24 " src="img/dollar-coin.png" alt="object">
+        <img class="hero-shape h-44 bottom-10 left-72" src="img/dollar-coin.png" alt="object">
+        <img class="hero-shape h-36 top-64 left-96" src="img/download-cloud.png" alt="object">
+        <img class="hero-shape hero-shape-blur h-28 top-36 right-96" src="img/download-cloud.png" alt="object">
       </div>
     </div>
     <section class="why-section h-screen sm:h-[40vh] bg-white flex items-center justify-center">
@@ -297,10 +297,10 @@
                 </div>
             </div>
             <div class="img-stepper-container self-center flex flex-col items-center lg:w-3/6 w-2/6 ">
-               <img class="w-72 img-stepper-container-1" src="../img/directions.png" alt="directions">
-               <img class="w-72 hidden img-stepper-container-2" src="../img/secure-data.png" alt="secure">
-               <img class="w-72 hidden img-stepper-container-3" src="../img/transparency.png" alt="transparency">
-               <img class="w-72 hidden img-stepper-container-4" src="../img/deadline.png" alt="deadline">
+               <img class="w-72 img-stepper-container-1" src="img/directions.png" alt="directions">
+               <img class="w-72 hidden img-stepper-container-2" src="img/secure-data.png" alt="secure">
+               <img class="w-72 hidden img-stepper-container-3" src="img/transparency.png" alt="transparency">
+               <img class="w-72 hidden img-stepper-container-4" src="img/deadline.png" alt="deadline">
             </div>
         </section>
     </div>
@@ -385,7 +385,7 @@
         <p class="text-site-text-secondary">تحميل</p>
         <p class="text-site-text-primary font-bold">اتقان برو</p>
       </div>
-      <img src="../img/qr.svg" alt="qr" class="h-full">
+      <img src="img/qr.svg" alt="qr" class="h-full">
     </div>
     <footer class="bg-white lg:px-32 px-8 mt-10">
       <div class="footer-links-container flex lg:flex-row flex-col gap-8 justify-evenly items-start lg:items-center">
@@ -405,7 +405,7 @@
         <a href="" class="text-site-text-secondary text-lg font-bold">تابعنا</a>
       </div>
       <div class="footer-logo-container">
-        <img src="../img/logo.png" alt="logo" class="w-36 mx-auto">
+        <img src="img/logo.png" alt="logo" class="w-36 mx-auto">
       </div>
       <p class="text-site-text-secondary text-sm text-center my-5">جميع الحقوق محفوظة © اتقان برو</p>
     </footer>
